README edited to give proper information

--- a/my_boston_project.ipynb
+++ b/my_boston_project.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "#load the Boston housing dataset\n",
     "\n",
-    "data = pd.read_csv('housing.csv')\n",
+    "data = pd.read_csv('dataset/housing.csv')\n",
     "prices = data['MEDV']\n",
     "features = data.drop('MEDV',axis=1)\n",
     "\n",
